images to get done

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
     .product img {
       width: 150px;
-      height: auto;
+      height: 200px;
       border-bottom: 2px solid #4caf50;
     }
     .product h3 {
@@ -80,100 +80,87 @@
 </head>
 <body>
   <div class="header">
-    <img src="sources-jpg/orthoplace png.png" alt="Logo de la empresa" class="logo">
+    <img src="img/orthoplace png.png" alt="Logo de la empresa" class="logo">
   </div>
   <h1>Súper ofertas</h1>
   <div class="product-container">
     <div class="product">
-      <img src="sources-jpg/IMG_2228.png" alt="Producto 1" width="150">
+      <img src="img/gutaperchas.jpg" alt="Producto 1" width="150">
       <h3>Conos de gutapercha</h3>
-      <p>Precio: S/. 5 </p>
+      <p>S/. 5 </p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Conos%20de%20gutapercha%20(S/5)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="sources-jpg/coon.jpeg" alt="Producto 2" width="150">
+      <img src="img/coon.jpg" alt="Producto 2" width="150">
       <h3>Alicate Coon</h3>
-      <p>Precio: S/. 50.00</p>
+      <p>S/. 50.00</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="sources-jpg/Cosa-maquira.jpeg" alt="Producto 2" width="150">
+      <img src="img/cosa-maquira.png" alt="Producto 3" width="150">
       <h3></h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
+      <img src="img/cepillos.jpg" alt="Producto 4" width="150">
+      <h3>Cepillos 3M</h3>
+      <p>S/. 20.00 </p>
+      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
+    </div>
+    <div class="product">
+      <img src="img/porta cepillo.jpg" alt="Producto 5" width="150">
+      <h3>Porta cepillos</h3>
+      <p>S/. 15.00</p>
+      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
+    </div>
+    <div class="product">
+      <img src="img/kfile21mm.png" alt="Producto 6" width="150">
+      <h3>Limas K-file</h3>
+      <p>S/. 20.00</p>
+      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
+    </div>
+    <div class="product">
+      <img src="img/kfile28.png" alt="Producto 7" width="150">
+      <h3>Limas K-file</h3>
+      <p>S/. 20.00</p>
+      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
+    </div>
+    <div class="product">
+      <img src="img" alt="Producto 8" width="150">
       <h3>Producto 2</h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
+      <img src="producto2.jpg" alt="Producto 9" width="150">
       <h3>Producto 2</h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
+      <img src="producto2.jpg" alt="Producto 10" width="150">
       <h3>Producto 2</h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
+      <img src="producto2.jpg" alt="Producto 11" width="150">
       <h3>Producto 2</h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
+      <img src="producto2.jpg" alt="Producto 12" width="150">
       <h3>Producto 2</h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
     <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
+      <img src="producto2.jpg" alt="Producto 13" width="150">
       <h3>Producto 2</h3>
       <p>Precio: $15</p>
       <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
     </div>
-    <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
-      <h3>Producto 2</h3>
-      <p>Precio: $15</p>
-      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
-    </div>
-    <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
-      <h3>Producto 2</h3>
-      <p>Precio: $15</p>
-      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
-    </div>
-    <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
-      <h3>Producto 2</h3>
-      <p>Precio: $15</p>
-      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
-    </div>
-    <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
-      <h3>Producto 2</h3>
-      <p>Precio: $15</p>
-      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
-    </div>
-    <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
-      <h3>Producto 2</h3>
-      <p>Precio: $15</p>
-      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
-    </div>
-    <div class="product">
-      <img src="producto2.jpg" alt="Producto 2" width="150">
-      <h3>Producto 2</h3>
-      <p>Precio: $15</p>
-      <button onclick="window.location.href='https://wa.me/938105365?text=Hola,%20quiero%20comprar%20Producto%202%20($15)'">Comprar</button>
-    </div>
-  </div>
 </body>
 </html>
